--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,12 +19,12 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "paths": {
-      "@/*": ["./src/*"],
-      "@C/*": ["./src/components/*"]
-    }    
+    // "paths": {
+    //   "@/*": ["./src/*"],
+    //   "@C/*": ["./src/components/*"]
+    // }    
   },
-  "include": [
-    "src"
-, "config-overrides.js"  ]
+//   "include": [
+//     "src"
+// , "config-overrides.js"  ]
 }
