--- a/package.json
+++ b/package.json
@@ -4,28 +4,29 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "customize-cra": "^1.0.0",
-    "react": "^18.2.0",
-    "react-app-rewire-alias": "^1.1.7",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "@gsap/react": "^2.1.0",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^6.12.3",
     "@studio-freight/lenis": "^1.0.34",
     "@studio-freight/react-lenis": "^0.0.43",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.5.1",
+    "customize-cra": "^1.0.0",
     "framer-motion": "^11.0.3",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^5.0.0-beta.11",
+    "react": "^18.2.0",
+    "react-app-rewire-alias": "^1.1.7",
+    "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^9.7.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.0",
-    "sass": "^1.70.0"
+    "react-scripts": "5.0.1",
+    "sass": "^1.70.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-input-mask": "^3.0.5"
   }
 }
