--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "locomotive-scroll": "^5.0.0-beta.11",
     "react": "^18.2.0",
     "react-app-rewire-alias": "^1.1.7",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.5",
     "react-input-mask": "^2.0.4",
