Small refactor + tablet responce(v.1)

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "@gsap/react": "^2.1.0",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^6.12.3",
     "@studio-freight/lenis": "^1.0.34",
@@ -18,6 +19,7 @@
     "gsap": "^3.12.5",
     "i18n": "^0.15.1",
     "locomotive-scroll": "^5.0.0-beta.11",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-app-rewire-alias": "^1.1.7",
     "react-device-detect": "^2.2.3",
